change CCMIS CutBoolComparator switchover to UNN. add some comments. try to debug CCMIS on my data structures.